# TicTacToe

./: CMakeLists.txt  README.md  main.cpp
Bots/: bot.h  easyBot.cpp  easyBot.h  impossibleBot.cpp  impossibleBot.h
Game/: GameManager.cpp  GameManager.h
